--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@syncfusion/ej2-react-calendars": "^22.2.12",
     "bootstrap": "^5.3.1",
     "cdbreact": "^1.5.18",
     "firebase": "^10.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-clock": "^4.5.0",
     "react-datepicker": "^4.17.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-time-picker": "^6.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
