--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^5.3.1",
     "cdbreact": "^1.5.18",
     "firebase": "^10.3.1",
+    "font-awesome": "^4.7.0",
+    "google-maps": "^4.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-clock": "^4.5.0",
